# wasm_bazel_testing

./: .gitignore  .npmrc  .puppeteerrc.js  BUILD  MODULE.bazel  package-lock.json  package.json  pnpm-lock.yaml
bazel/: embed_data.bzl  toolchain.bzl  transitions.bzl
tests/flatbuffers/parsing/: BUILD  message.fbs  parser.cc  parser_test.cc
tests/flatbuffers/to_json/: BUILD  robot.fbs  to_json.cc  to_json_test.cc
tests/hello/: BUILD  hello.cc  hello_test.cc
tests/hello-web/: BUILD  hello_web.cc  hello_web_test.html  wasm_puppeteer_test.js
tests/hello-web/chrome_downloader/: BUILD  chrome_downloader.js  chrome_executable_path.js
tests/hello-web/firefox_downloader/: BUILD  firefox_downloader.js  firefox_executable_path.js
tools/webserver/: BUILD  main.cc
tools/webserver/static/: hello-web-test.html  hello-web.html  index.html
utils/: BUILD  wasmtime_runner.h
